<?xml version="1.0"?>
<package format="3">
  <name>voxblox</name>
  <version>0.0.0</version>
  <description>Voxblox for ROS2 port</description>


  <maintainer email="miguel.fernandez@uni.lu">Miguel Fernandez-Cortizas</maintainer>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>minkindr</depend>

</package>
