<?xml version="1.0"?>
<package format="3">
  <name>voxblox_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for Voxblox ROS interface.</description>

  <maintainer email="miguel.fernandez@uni.lu">Miguel Fernandez-Cortizas</maintainer>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
