<?xml version="1.0"?>
<package format="3">
  <name>voxblox_rviz_plugin</name>
  <version>0.0.0</version>
  <description>RViz2 plugin for displaying incremental voxblox mesh messages in ROS2.</description>
  <maintainer email="miguel.fernandez@uni.lu">Miguel Fernandez-Cortizas</maintainer>
  <license>BSD</license>
  <author>Zachary Taylor</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
